import { FlyBehavior } from "./FlyBehavior";

export class FlyWithWings implements FlyBehavior {
  fly() {
    console.log("I'm flying!!");
  }
}
